--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="createcity_negative">Cancel</string>
     <string name="createcity_cityhint">New York, London ...</string>
     <string name="menu_create_city">menu_create_city</string>
+    <string name="deletecity_title">Do you really want to delete %1$s?</string>
+    <string name="deletecity_positive">Delete city</string>
+    <string name="deletecity_negative">Cancel</string>
 </resources>
