--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="city_message_error_could_not_create_city">Could not create city</string>
     <string name="city_message_info_city_deleted">%1$s has been deleted</string>
     <string name="city_message_error_could_not_delete_city">Could not delete %1$s</string>
+    <string name="weather_message_error">Error loading data</string>
+
+    <string name="weather_temperature_value">%1$d °C</string>
+    <string name="weather_humidity_value">%1$d %%</string>
+    <string name="weather_pressure_value">%1$d hPa</string>
 </resources>
